baml_language/crates/baml_tests/snapshots/diagnostic_errors/generic_error_arg_no_cascade/baml_tests__diagnostic_errors__generic_error_arg_no_cascade__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.consume<T>(x: T) -> int throws never {
  { : 0
    0 : 0
  }
}
function user.broken_arg() -> int throws never {
  { : int
    consume<T>([1, 2, 3].len()) : int
  }
  !! 616..619: type `int[]` has no member `len`
}
function user.identity<T>(x: T) -> T throws never {
  { : T
    x : T
  }
}
function user.broken_arg_bound_from_expected() -> int throws never {
  { : int
    identity<T>([1, 2, 3].len()) : int
  }
  !! 964..967: type `int[]` has no member `len`
}
function user.phantom<T>() -> int throws never {
  { : 0
    0 : 0
  }
}
function user.still_reports() -> int throws never {
  { : int
    phantom() : int
  }
  !! 1194..1203: cannot infer type parameter `T`
}
