baml_language/crates/baml_tests/snapshots/diagnostic_errors/generic_error_arg_no_cascade/baml_tests__diagnostic_errors__generic_error_arg_no_cascade__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 37350
---
=== COMPILER2 DIAGNOSTICS ===
  [type] E0007

  × type `int[]` has no member `len`
    ╭─[main.baml:14:13]
 14 │     consume([1, 2, 3].len())
    ·             ───────────────
    ╰────

  [type] E0007

  × type `int[]` has no member `len`
    ╭─[main.baml:25:14]
 25 │     identity([1, 2, 3].len())
    ·              ───────────────
    ╰────
